@@ -1,3 +1,13 @@
+2006-01-13  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/gobjectmodule.c: (pyg_io_add_watch),
+	(marshal_emission_hook), (pyg_add_emission_hook),
+	(pyg_remove_emission_hook):
+	* gobject/pygobject.c:
+	* tests/test_signal.py:
+
+	Add add/remove_emission_hook and tests. Fixes #325977
+
 2006-01-11  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* gobject/gobjectmodule.c (_pyg_signal_accumulator),
